frontend: fix padding of empty wallet message on mobile
Empty transaction message did not have any padding on mobile.

Regression introduced in ead160208dd13f6c066470d297c3d32b0c5eade1

--- a/frontends/web/src/routes/account/account.module.css
+++ b/frontends/web/src/routes/account/account.module.css
@@ -54,7 +54,6 @@
     justify-content: flex-end;
 }
 
-
 .withWalletConnect .walletConnect {
     display: flex;
 }
@@ -85,6 +84,10 @@
     margin-right: var(--space-eight);
 }
 
+.errorLoadTransactions {
+    text-align: center;
+}
+
 .titleWithButton {
     align-items: baseline;
     color: var(--color-secondary);
@@ -96,6 +99,11 @@
     padding-left: var(--space-half);
     padding-right: 0;
     text-align: right;
+}
+
+.emptyTransactions {
+    color: var(--color-secondary);
+    text-align: center;
 }
 
 @media (max-width: 768px) {
